--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -43,8 +44,7 @@
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
