--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "author": "StepAI Team",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.6.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
