--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "StepAI API 서버",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --skipLibCheck",
     "build:simple": "node build-simple.js",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
