--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --skipLibCheck",
-    "pm2:start": "pm2 start ecosystem.config.js",
-    "pm2:stop": "pm2 stop stepai-api",
-    "pm2:restart": "pm2 restart stepai-api",
-    "pm2:delete": "pm2 delete stepai-api",
-    "pm2:logs": "pm2 logs stepai-api",
+    "pm2:start": "npm run build && npx pm2 start ecosystem.config.js",
+    "pm2:stop": "npx pm2 stop stepai-api",
+    "pm2:restart": "npx pm2 restart stepai-api",
+    "pm2:delete": "npx pm2 delete stepai-api",
+    "pm2:logs": "npx pm2 logs stepai-api",
     "deploy": "./deploy.sh",
     "build:simple": "node build-simple.js",
     "start": "node dist/index.js",
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
+    "pm2": "^5.3.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
   },
