--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
